--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier": "1.14.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-quill": "1.3.1",
     "react-scripts": "1.1.5"
   },
   "husky": {
