--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "6.5.4",
     "husky": "1.0.1",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-quill": "1.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-speech-recognition": "1.0.7"
   },
   "husky": {
     "hooks": {
