--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prettier": "1.14.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-helmet": "5.2.0",
     "react-quill": "1.3.1",
     "react-scripts": "1.1.5",
     "react-speech-recognition": "1.0.7"
