--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ajv": "6.5.4",
+    "file-saver": "2.0.0-rc.3",
     "husky": "1.0.1",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3",
