--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,13 @@
     "persistent": false
   },
   "browser_action": {},
-  "icons": [
+  "icons": 
     {
-      "16": "../src/img/logo-16.png",
-      "48": "../src/img/logo-48.png",
-      "128": "../src/img/logo-128.png",
-      "512": "../src/img/logo-512.png"
-    }
-  ],
+      "16": "favicon.png",
+      "48": "favicon.png",
+      "128": "favicon.png",
+      "512": "favicon.png"
+    },
   "permissions": [
     "tabs"
   ]
